--- a/oclicode/templates/urfavecli/cli.gen.go.tmpl
+++ b/oclicode/templates/urfavecli/cli.gen.go.tmpl
@@ -5,7 +5,9 @@ package {{.Opts.GoPackage}}
 
 import (
   "context"
-
+  {{if .Doc.AltSources}}
+  altsrc "github.com/urfave/cli-altsrc/v3"
+  {{- end}}
   urfavecli "github.com/urfave/cli/v3"
 )
 
