feat: support alternative sources in docs generation + bug fixes

--- a/oclicode/templates/urfavecli/cmd_props_args.tmpl
+++ b/oclicode/templates/urfavecli/cmd_props_args.tmpl
@@ -1,3 +1,4 @@
+{{- /* THERE APPEARS TO BE A BUG IN URFAVE/CLI V3 THAT MAKES ARGS NOT PARSE WHEN DECLARED
 {{- if .Command.Arguments }}
 	{{.Command.Name | CamelCase}}Cmd.Arguments = []urfavecli.Argument{
 	{{- range .Command.Arguments}}
@@ -7,3 +8,4 @@
 	{{- end}}
 	}
 {{- end}}
+*/ -}}
