chore: update markdown docs template to make alt sources more succinct

--- a/oclidocs/templates/markdown/docs.tmpl
+++ b/oclidocs/templates/markdown/docs.tmpl
@@ -149,15 +149,14 @@ _{{.Doc.Info.Summary}}_
 
 ###### Alternative Sources
 
-| Type | Name | Property |
-|:-----|:-----|:---------|
 {{- range .AltSources}}
 {{- if eq .Type "env"}}
-| Environment Variable | `{{.EnvironmentVariable}}` | N/A |
+- `env:${{.EnvironmentVariable}}`
 {{- else}}
-| File ({{.File.Format}}) | `{{.File.Path}}` | `{{.File.Property}}` |
+- `{{.File.Path}}:{{.File.Property}}`
 {{- end}}
 {{- end}}
+
 {{- end}}
 {{- end}}
 
