fix: global.configFiles schema

--- a/oclicode/templates/urfavecli/cmd_props_flags.tmpl
+++ b/oclicode/templates/urfavecli/cmd_props_flags.tmpl
@@ -34,7 +34,7 @@
 				{{- else}}
 				{{- if eq .File.Format "YAML"}}
 				yamlsrc.YAML
-				{{- else if eq .File.Format "json"}}
+				{{- else if eq .File.Format "JSON"}}
 				jsonsrc.JSON
 				{{- else}}
 				tomlsrc.TOML
